5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/4009/executions/1838_1273.log
== SUBMITION (2019-06-26 09:53:26) 
-- CODE:
rom numpy import *
from numpy.linalg import *
M = array([[1 ,-1 ,0,0], [0 ,1 , -1,0 ], [0 ,0  ,1,0 ],[1,0,0,1]])
a = array([50,-120,350,870])
r = dot(inv(M),a.T)
print(r)
-- EXECUTION TIME:
0.867384
-- ERROR:
  File "/home/codebench/codes/1838/1273/main.py", line 1
    rom numpy import *
            ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-26 09:53:30) 
-- CODE:
rom numpy import *
from numpy.linalg import *
M = array([[1 ,-1 ,0,0], [0 ,1 , -1,0 ], [0 ,0  ,1,0 ],[1,0,0,1]])
a = array([50,-120,350,870])
r = dot(inv(M),a.T)
print(r)
-- EXECUTION TIME:
0.714025
-- ERROR:
  File "/home/codebench/codes/1838/1273/main.py", line 1
    rom numpy import *
            ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-26 09:53:36) 
-- CODE:
rom numpy import *
from numpy.linalg import *
M = array([[1 ,-1 ,0,0], [0 ,1 , -1,0 ], [0 ,0  ,1,0 ],[1,0,0,1]])
a = array([50,-120,350,870])
r = dot(inv(M),a.T)

print(r)
-- EXECUTION TIME:
0.576751
-- ERROR:
  File "/home/codebench/codes/1838/1273/main.py", line 1
    rom numpy import *
            ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-26 09:56:38) 
-- CODE:
from numpy import *
from numpy.linalg import *
M = array([[1 ,-1 ,0,0], [0 ,1 , -1,0 ], [0 ,0  ,1,0 ],[1,0,0,1]])
a = array([50,-120,350,870])
r = dot(inv(M),a.T)
print(r)
-- EXECUTION TIME:
1.11702
-- TEST CASE 1:
---- input:
Não_há
---- correct output:
[280. 230. 350. 590.]
---- user output:
[280. 230. 350. 590.]
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
